[tool.poetry]
name = "most-popular-python-packages"
version = "0.1.0"
description = ""
authors = ["Duncan Haywood <duncan.haywood.ai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
logging = "^0.4.9.6"
tenacity = "^8.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
